--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Momentum App</title>
 </head>
 <body>
+    <p id="nameTag">Created By KurtYoon</p>
     <h2 id="clock">00:00</h2>
     <form id="login-form" class="hidden">
         <input id="input1" required maxlength="15" 
